--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -33,8 +33,11 @@ mat-sidenav-container {
 
 table {
   width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  min-width: 500px;
 }
-
 th.mat-header-cell {
-  text-align: center;
+  text-align: left;
+  max-width: 300px;
 }
