--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav  class="mat-elevation-z8">
+  <mat-sidenav>
   </mat-sidenav>
   <mat-sidenav-content>
     <div class="content mat-elevation-z8">
