--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar class = "actions-bar" >
+  <button mat-button color="primary" (click)="onCreate()">Create</button>
+  <button mat-button color="primary">Refresh</button>
+</mat-toolbar>
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> Id </th>
@@ -19,11 +23,27 @@
     <td mat-cell *matCellDef="let element"> {{element.status}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="expirationUtc">
+    <th mat-header-cell *matHeaderCellDef> Expiration </th>
+    <td mat-cell *matCellDef="let element"> {{element.expirationUtc | date:'yyyy-MM-dd HH:mm:ss'}} </td>
+  </ng-container>
+
   <ng-container matColumnDef="updatedUtc">
     <th mat-header-cell *matHeaderCellDef> Updated Time </th>
-    <td mat-cell *matCellDef="let element"> {{element.updatedUtc}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.updatedUtc | date:'yyyy-MM-dd HH:mm:ss'}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="profile">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element"><mat-icon>view_list</mat-icon></td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+      There are no tasks
+    </td>
+  </tr>
 </table>
