--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,14 +1,17 @@
-mat-toolbar {
-  background: #004a9f;
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-toolbar {
+  background: mediumaquamarine;
   color: white;
 }
 
-mat-sidenav {
+.mat-sidenav {
   margin: 16px;
   width: 200px;
   border-right: none;
   background: #002b5c;
-  color: white;
+  color: #002b5c;
   border-radius: 10px;
   padding: 16px;
   text-align: center;
@@ -16,10 +19,8 @@ mat-sidenav {
 
 .content {
   height: calc(100vh - 98px);
-  border-radius: 10px;
   margin: 16px;
 
-  display: flex;
   justify-content: center;
   align-items: center;
 
@@ -27,7 +28,7 @@ mat-sidenav {
   color: lightgray;
 }
 
-mat-sidenav-container {
+.mat-sidenav-container {
   height: calc(100vh - 65px);
 }
 
@@ -35,9 +36,26 @@ table {
   width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-  min-width: 500px;
 }
 th.mat-header-cell {
   text-align: left;
   max-width: 300px;
+}
+
+.actions-menu{
+  width: 100%;
+  height: 20%;
+}
+
+.actions-bar {
+  background: ghostwhite;
+  display: table-cell;
+  width: 100%;
+}
+
+.mat-button.mat-primary{
+  color: black;
+  background-color: lightskyblue;
+  margin: 5px;
+  display: flex;
 }
