add formly form

--- a/frontend/src/app/business/tasks/tasks-create/create-task.component.html
+++ b/frontend/src/app/business/tasks/tasks-create/create-task.component.html
@@ -1,8 +1,10 @@
-<ng-container>
-    <h2 mat-dialog-title>Create new task</h2>
-    <mat-dialog-content class="mat-typography">
-    </mat-dialog-content>
-    <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>Cancel</button>
-    </mat-dialog-actions>
-</ng-container>
+<h2 mat-dialog-title>Create new task</h2>
+<mat-dialog-content class="mat-typography">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+    <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Cancel</button>
+</mat-dialog-actions>
