Ability to create tasks and view errors from ui

--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class = "actions-bar" >
   <button mat-button color="primary" (click)="onCreate()">Create</button>
-  <button mat-button color="primary">Refresh</button>
+  <button mat-button color="primary" (click)="onRefresh()">Refresh</button>
 </mat-toolbar>
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="id">
