--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class = "actions-bar" >
   <button mat-button color="primary" (click)="onCreate()">Create</button>
+  <button mat-button color="primary" (click)="onSetScope()">{{currentScope}}</button>
   <button mat-button color="primary" (click)="onRefresh()">Refresh</button>
 </mat-toolbar>
 <table mat-table [dataSource]="dataSource">
@@ -35,7 +36,11 @@
 
   <ng-container matColumnDef="profile">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element"><mat-icon>view_list</mat-icon></td>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button color="danger" (click)="onArchive(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
