--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar>
   Tasks Platform
+  <button mat-button class="btn btn-default" (click)="viewJobs()">Jobs</button>
 </mat-toolbar>
 
 <mat-sidenav-container>
