Ability to view tasks profile (dialog)

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar>
   Tasks Platform
-  <button mat-button class="btn btn-default" (click)="viewJobs()">Jobs</button>
+  <div class = "settings-container">
+    <button mat-button class="btn btn-default" (click)="viewJobs()">Jobs</button>
+  </div>
 </mat-toolbar>
 
 <mat-sidenav-container>
