--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -38,6 +38,9 @@
   <ng-container matColumnDef="profile">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
+      <button mat-button (click)="onView(element.id)">
+        <mat-icon>description</mat-icon>
+      </button>
       <button mat-button (click)="onArchive(element.id)">
         <mat-icon>delete</mat-icon>
       </button>
