--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -27,12 +27,15 @@
 
   <ng-container matColumnDef="expirationUtc">
     <th mat-header-cell *matHeaderCellDef> Expiration </th>
-    <td mat-cell *matCellDef="let element"> {{element.expirationUtc | date:'yyyy-MM-dd HH:mm:ss'}} </td>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon *ngIf="!!!element.expirationUtc">clear</mat-icon>
+      {{element.expirationUtc  | date:'short':'GMT'}}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="updatedUtc">
     <th mat-header-cell *matHeaderCellDef> Updated Time </th>
-    <td mat-cell *matCellDef="let element"> {{element.updatedUtc | date:'yyyy-MM-dd HH:mm:ss'}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.updatedUtc | date:'short':'GMT'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="profile">
