--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -42,7 +42,7 @@
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
       <button mat-button (click)="onView(element.id)">
-        <mat-icon>description</mat-icon>
+        <mat-icon>edit</mat-icon>
       </button>
       <button mat-button (click)="onArchive(element.id)">
         <mat-icon>delete</mat-icon>
