--- a/frontend/src/app/business/tasks/task-profile/task-profile.component.html
+++ b/frontend/src/app/business/tasks/task-profile/task-profile.component.html
@@ -1,8 +1,3 @@
-<h2 mat-dialog-title>Update task #{{model.id}}</h2>
-<mat-dialog-content class="mat-typography">
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-    <button mat-button class="btn btn-default" [disabled]="!form.valid">Update</button>
-    <button mat-button mat-dialog-close>Cancel</button>
-  </form>
-</mat-dialog-content>
+<div class = "task-profile-container">
+  <h1>Task profile component {{model?.id}}</h1>
+</div>
