--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -69,3 +69,8 @@ th.mat-header-cell {
 .description-container{
   max-width: 5%;
 }
+
+.task-profile-container{
+  font-size: 2rem;
+  color: black;
+}
