--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -41,8 +41,8 @@
   <ng-container matColumnDef="profile">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button (click)="onView(element.id)">
-        <mat-icon>edit</mat-icon>
+      <button mat-button (click)="ui.router.RedirectToTaskProfile(element.id)">
+        <mat-icon>info</mat-icon>
       </button>
       <button mat-button (click)="onArchive(element.id)">
         <mat-icon>delete</mat-icon>
