task profile component

--- a/frontend/src/app/business/tasks/task-profile/task-profile.component.html
+++ b/frontend/src/app/business/tasks/task-profile/task-profile.component.html
@@ -1,3 +1,14 @@
 <div class = "task-profile-container">
+  <mat-toolbar class = "actions-bar">
+    <button mat-button color = "primary">Back</button>
+    <button mat-button color = "primary">Refresh</button>
+    <button mat-button color = "primary">Delete</button>
+  </mat-toolbar>
+  <div class = "description-container">
+
+  </div>
+  <div class = "info-container">
+
+  </div>
   <h1>Task profile component {{model?.id}}</h1>
 </div>
