--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -41,11 +41,11 @@
   <ng-container matColumnDef="profile">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button (click)="ui.router.RedirectToTaskProfile(element.id)">
-        <mat-icon>info</mat-icon>
-      </button>
       <button mat-button (click)="onArchive(element.id)">
         <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-button (click)="ui.router.RedirectToTaskProfile(element.id)">
+        <mat-icon>trending_flat</mat-icon>
       </button>
     </td>
   </ng-container>
