add priority and category in the frontend app

--- a/frontend/src/app/business/tasks/task-profile/task-profile.component.html
+++ b/frontend/src/app/business/tasks/task-profile/task-profile.component.html
@@ -1,6 +1,6 @@
 <div class = "task-profile-container">
   <mat-toolbar class = "actions-bar">
-    <button mat-button color = "primary">Back</button>
+    <button mat-button color = "primary" (click)="ui.router.RedirectToHome()">Back</button>
     <button mat-button color = "primary">Refresh</button>
     <button mat-button color = "primary">Delete</button>
   </mat-toolbar>
