--- a/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
+++ b/frontend/src/app/business/tasks/tasks-view/tasks-view.component.html
@@ -15,6 +15,11 @@
     <td mat-cell *matCellDef="let element"> {{element.title}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="priority">
+    <th mat-header-cell *matHeaderCellDef> Priority </th>
+    <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+  </ng-container>
+
   <ng-container matColumnDef="state">
     <th mat-header-cell *matHeaderCellDef> State </th>
     <td mat-cell *matCellDef="let element"> {{element.state}} </td>
